# FastAPI-CRUD-MongoDB

./: pyproject.toml  readme.md  run.sh  streamlit_app.py
app/: data_model.py  main.py
app/routers/: router.py
